--- a/data/common.yaml
+++ b/data/common.yaml
@@ -65,6 +65,10 @@ profile::jenkinsmaster::plugins:
       'version': '1.0.12'
     'view-job-filters':
       'version': '1.26'
+    'ruby-runtime':
+      'version': '0.12'
+    'async-http-client':
+      'version': '1.7.4'
 profile::sonar::plugins:
     'sonar-motion-chart-plugin':
       'version'    : '1.6'
