ssh client config

--- a/data/common.yaml
+++ b/data/common.yaml
@@ -102,3 +102,11 @@ devtools::desktop::packages:
     - 'chromium-browser'
 devtools::desktop::desktop:
    - 'ubuntu-desktop'
+ssh::client_options:
+    'Host *':
+        SendEnv: 'LANG LC_*'
+	HashKnownHosts: 'yes'
+	GSSAPIAuthentication: 'yes'
+	StrictHostKeyChecking : 'no'
+
+	
